--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-ratings": "^8.1.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
